# Fizzle

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.1.8.md  RELEASE_NOTES_v0.1.9.md
.github/workflows/: windows-build.yml
cmake/: Version.cmake  Warnings.cmake
docs/: app.js  index.html  styles.css
installer/: Fizzle.iss  install_vbcable.ps1
resources/icon/: README.md
resources/screenshots/: .gitkeep
scripts/: build_installer.ps1  build_release.ps1  generate_logo_assets.ps1
src/: AppConfig.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  Biquad.h  BuiltInProcessors.cpp  BuiltInProcessors.h  ProcessorChain.cpp  ProcessorChain.h  Resampler.cpp  Resampler.h
src/core/: Logger.cpp  Logger.h  PresetStore.cpp  PresetStore.h  SettingsStore.cpp  SettingsStore.h
src/plugins/: VstHost.cpp  VstHost.h
src/ui/: DiagnosticsPanel.h  Knob.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  MeterComponent.h  Theme.h  TrayController.cpp  TrayController.h
tests/: DspTests.cpp  TestMain.cpp
